# pyegsnrc

./: .pre-commit-config.yaml  README.md  Regex replacements.txt  _util.py  common.py  convert.py  electr.py  macros.py  pyproject.toml
notebooks/: reformat-nrc-brems-data.ipynb  reformtat-xcom-data.ipynb  testing_jax_interp.ipynb
performance/: cc-class.cc  cc-plain.cc  performance-metrics.md  py-class.py  py-jaxjit.py  py-jaxnumpy.py  py-jaxornot.py  py-plain.py  py-wrap.py
prototyping/: mypy_based_particles.py
prototyping/notebooks/: reformat-nrc-brems-data.ipynb  testing_jax_interp.ipynb
prototyping/pyegsnrc/: __main__.py  interpolation.py  lookuptable.py  particles.py  randomwalk.py  timer.py
prototyping/pyegsnrc/data/: load.py
prototyping/pyegsnrc/data/bremsstrahlung/: Z004.csv  Z006.csv  Z008.csv  Z010.csv  Z018.csv  Z020.csv  Z023.csv  Z027.csv  Z028.csv  Z035.csv  Z036.csv  Z044.csv  Z052.csv  Z053.csv  Z056.csv  Z063.csv  Z067.csv  Z070.csv  Z071.csv  Z072.csv  Z073.csv  Z079.csv  Z089.csv  Z091.csv  Z096.csv
prototyping/pyegsnrc/data/nrc_brems/: Z001.csv  (+40 more)
pyegsnrc/: __main__.py  interpolation.py  lookuptable.py  particles.py  randomwalk.py
pyegsnrc/data/: load.py
pyegsnrc/data/bremsstrahlung/: README.md  Z003.csv  Z011.csv  Z014.csv  Z016.csv  Z019.csv  Z021.csv  Z033.csv  Z037.csv  Z038.csv  Z040.csv  Z042.csv  Z046.csv  Z047.csv  Z048.csv  Z050.csv  Z057.csv  Z059.csv  Z060.csv  Z061.csv  Z065.csv  Z066.csv  Z069.csv  Z074.csv  Z075.csv  Z076.csv  Z078.csv  Z083.csv  Z084.csv  Z087.csv  Z093.csv  Z094.csv  Z095.csv  Z097.csv  Z098.csv
pyegsnrc/data/xcom/: README.md  compton-scattering.csv  pair-production.csv  triplet-production.csv
templates/: particle_tmpl.py
