[tool.poetry]
name = "pyegsnrc"
version = "0.1.0-dev1"
description = ""
authors = []
packages = [{ include = "pyegsnrc", from = "prototyping" }]

[tool.poetry.dependencies]
python = "^3.6.2"
typing-extensions = "*"
jax = "*"
jaxlib = "*"
matplotlib = "*"
pandas = "*"
typer = "*"
scipy = "*"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
mypy = "*"
rope = "*"
pylint = "*"
pytest = "*"
pre-commit = "*"

[tool.poetry.scripts]
pyegsnrc = "pyegsnrc.__main__:main"
