[tool.poetry]
name = "pyegsnrc"
version = "0.2.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.6.2"
typing-extensions = "*"
jax = "*"
jaxlib = "*"
matplotlib = "*"
pandas = "*"
typer = "*"
scipy = "*"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
mypy = "*"
rope = "*"
pylint = "*"
pytest = "*"
pre-commit = "*"
ipykernel = "*"

[tool.poetry.scripts]
pyegsnrc = "pyegsnrc.__main__:main"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
